--- a/Multiple_Linear_Regression_.ipynb
+++ b/Multiple_Linear_Regression_.ipynb
@@ -6,7 +6,7 @@
       "name": "Multiple Linear Regression .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPO2YzUKhCHP3IKoRNW7TGV",
+      "authorship_tag": "ABX9TyPlsNyEDArED0TWLLJTnqfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -626,17 +626,13 @@
       "source": [
         "1. Analisis Determinasi (R-squared dan Adj. R-squared)\n",
         "\n",
+        "  \n",
+        "\n",
+        "\n",
         "Analisis determinasi digunakan untuk mengetahui seberapa besar pengaruh kombinasi variabel bebas secara bersama – sama mempengaruhi variabel terikat. Nilai R-squared berkisar antara 0 - 1. Ketika nilai R-squared bernilai 0 maka tidak ada pengaruh yang diberikan variable bebas terhadap variabel terikat. Pengaruh variabel bebas terhadap variabel terikat bernilai sempurna apabila nilai R-squared sama dengan 1. Pada model summary diatas nilai R-squared nya adalah 0.521 atau 52,1%, yang artinya price dan advertising (variabel bebas) memberikan pengaruh terhadap penjualan pie (variabel terikat) sebesar 52,1% sedangkan sisanya dipengaruhi oleh variabel lain diluar variabel bebas yang ada.\n",
         "\n",
-        "Selanjutnya  Adj. R-squared atau nilai R-squared yang telah disesuaikan akan menghitung setiap penambahan variabel dan akan mengestimasi nilai R squared dari penambahan tersebut. Apabila penambahan variabel baru memperbaiki model hasil regresi dari pada estimasi maka nilai Adj. R-squared akan bertambah. Namun apabila model baru justru lebih kecil dari estimasi maka Adj. R-squarednya akan berkurang\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "haerjF616ijV"
-      },
-      "source": [
+        "Selanjutnya  Adj. R-squared atau nilai R-squared yang telah disesuaikan akan menghitung setiap penambahan variabel dan akan mengestimasi nilai R squared dari penambahan tersebut. Apabila penambahan variabel baru memperbaiki model hasil regresi dari pada estimasi maka nilai Adj. R-squared akan bertambah. Namun apabila model baru justru lebih kecil dari estimasi maka Adj. R-squarednya akan berkurang.\n",
+        "\n",
         "2. Uji F\n",
         "\n",
         "Pengujian ini menunjukan adanya pengaruh secara signifikan antara variabel bebas (price and advertising) dan variabel terikat (sales pie). Tahap - tahap uji F adalah sebagai berikut:\n",
@@ -651,15 +647,8 @@
         "\n",
         "c. berdasarkan data diatas besarnya F hitung adalah 6,539, maka besarnya (jumlah variabel–1)  = 2 dan (jumlah kasus-jumlah variabel bebas-1) atau 15-2-1  = 12 maka dapat dicari dengan excel => finv(0,05;2;12) dan nilai F tabel = 3,885293835\n",
         "\n",
-        "d. H0 akan diterima bila F hitung < F tabel dan H0 ditolak bila F hitung > F tabel, sehingga 6,539 > 3,885, atau F hitung > F tabel, artinya H0 ditolak atau adanya pengaruh signifikan antara price dan advertising terhadap sales pie."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Tqy6WeVFJ0Qa"
-      },
-      "source": [
+        "d. H0 akan diterima bila F hitung < F tabel dan H0 ditolak bila F hitung > F tabel, sehingga 6,539 > 3,885, atau F hitung > F tabel, artinya H0 ditolak atau adanya pengaruh signifikan antara price dan advertising terhadap sales pie.\n",
+        "\n",
         "3. Uji T\n",
         "\n",
         "Pengujian ini menunjukan adanya pengaruh secara parsial antara variabel bebas (price and advertising) dan variabel terikat (sales pie). Tahap - tahap uji T adalah sebagai berikut:\n",
@@ -692,6 +681,7 @@
         "c. berdasarkan data diatas besarnya T hitung adalah  2,855 dengan destribusi t dicari pada a/2 = 5%/2 = 2,5% = 0.025, maka besarnya (jumlah variabel–1) = 2 dan (jumlah kasus-jumlah variabel bebas-1) atau 15-2-1 = 12 maka dapat dicari dengan excel => tinv(0,05;12) dan nilai t tabel = 2,1788\n",
         "\n",
         "d.  H0 diterima jika -t tabel < t hitung < t tabel, H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga 2,855 > 2,1788, atau t hitung > t tabel, artinya H0 diterima atau adanya pengaruh parsial antara price dan advertising terhadap sales pie.\n",
+        "\n",
         "\n",
         "\n"
       ]
