--- a/Multiple_Linear_Regression_.ipynb
+++ b/Multiple_Linear_Regression_.ipynb
@@ -6,7 +6,7 @@
       "name": "Multiple Linear Regression .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPlsNyEDArED0TWLLJTnqfb",
+      "authorship_tag": "ABX9TyOGCA9+6NMGrpkTK+dmWwj2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -680,7 +680,7 @@
         "\n",
         "c. berdasarkan data diatas besarnya T hitung adalah  2,855 dengan destribusi t dicari pada a/2 = 5%/2 = 2,5% = 0.025, maka besarnya (jumlah variabel–1) = 2 dan (jumlah kasus-jumlah variabel bebas-1) atau 15-2-1 = 12 maka dapat dicari dengan excel => tinv(0,05;12) dan nilai t tabel = 2,1788\n",
         "\n",
-        "d.  H0 diterima jika -t tabel < t hitung < t tabel, H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga 2,855 > 2,1788, atau t hitung > t tabel, artinya H0 diterima atau adanya pengaruh parsial antara price dan advertising terhadap sales pie.\n",
+        "d.   H0 diterima jika -t tabel £ t hitung £ t tabel dan H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga 2,855 > 2,1788, atau t hitung > t tabel, artinya H0 ditolak atau adanya pengaruh parsial antara price dan advertising terhadap sales pie.\n",
         "\n",
         "\n",
         "\n"
