--- a/Multiple_Linear_Regression_.ipynb
+++ b/Multiple_Linear_Regression_.ipynb
@@ -6,7 +6,7 @@
       "name": "Multiple Linear Regression .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGCA9+6NMGrpkTK+dmWwj2",
+      "authorship_tag": "ABX9TyNIDzPi1PHk7kh6D1eQM19s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -639,15 +639,15 @@
         "\n",
         "a. hipotesis\n",
         "\n",
-        "H0 = tidak ada pengaruh secara signifikan\n",
+        "H0 = tidak ada pengaruh secara signifikan secara bersama sama\n",
         "\n",
-        "H1 = adanya pengaruh signifikan\n",
+        "H1 = adanya pengaruh signifikan secara bersama sama\n",
         "\n",
         "b. tingkat signifikan a= 5%\n",
         "\n",
         "c. berdasarkan data diatas besarnya F hitung adalah 6,539, maka besarnya (jumlah variabel–1)  = 2 dan (jumlah kasus-jumlah variabel bebas-1) atau 15-2-1  = 12 maka dapat dicari dengan excel => finv(0,05;2;12) dan nilai F tabel = 3,885293835\n",
         "\n",
-        "d. H0 akan diterima bila F hitung < F tabel dan H0 ditolak bila F hitung > F tabel, sehingga 6,539 > 3,885, atau F hitung > F tabel, artinya H0 ditolak atau adanya pengaruh signifikan antara price dan advertising terhadap sales pie.\n",
+        "d. H0 akan diterima bila F hitung < F tabel dan H0 ditolak bila F hitung > F tabel, sehingga 6,539 > 3,885, atau F hitung > F tabel, artinya H0 ditolak atau adanya pengaruh signifikan secara bersama-sama antara price dan advertising terhadap sales pie.\n",
         "\n",
         "3. Uji T\n",
         "\n",
@@ -658,29 +658,29 @@
         "\n",
         "a. hipotesis\n",
         "\n",
-        "H0 = tidak ada pengaruh secara parsial\n",
+        "H0 = tidak ada pengaruh signifikan secara parsial \n",
         "\n",
-        "H1 = adanya pengaruh parsial\n",
+        "H1 = adanya pengaruh  signifikan secara  parsial\n",
         "\n",
         "b. tingkat signifikan a= 5%\n",
         "\n",
         "c. berdasarkan data diatas besarnya T hitung adalah -2,306 dengan destribusi t dicari pada a/2 = 5%/2 = 2,5% = 0,025, maka besarnya (jumlah variabel–1) = 2 dan (jumlah kasus-jumlah variabel bebas-1) atau 15-2-1 = 12 maka dapat dicari dengan excel => tinv(0,05;12) dan nilai t tabel = -2,1788\n",
         "\n",
-        "d.  H0 diterima jika -t tabel < t hitung < t tabel, H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga -2,306 < -2,1788, atau t hitung < t tabel, artinya H0 diterima atau tidak adanya pengaruh parsial antara price dan advertising terhadap sales pie.\n",
+        "d.  H0 diterima jika -t tabel < t hitung < t tabel, H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga -2,306 < -2,1788, atau t hitung < t tabel, artinya H0 diterima atau tidak adanya pengaruh signifikan secara parsial antara price dan advertising terhadap sales pie.\n",
         "\n",
         "> advertising\n",
         "\n",
         "a. hipotesis\n",
         "\n",
-        "H0 = tidak ada pengaruh secara parsial\n",
+        "H0 = tidak ada pengaruh  signifikan  secara parsial\n",
         "\n",
-        "H1 = adanya pengaruh parsial\n",
+        "H1 = adanya pengaruh  signifikan  secara parsial\n",
         "\n",
         "b. tingkat signifikan a= 5%\n",
         "\n",
         "c. berdasarkan data diatas besarnya T hitung adalah  2,855 dengan destribusi t dicari pada a/2 = 5%/2 = 2,5% = 0.025, maka besarnya (jumlah variabel–1) = 2 dan (jumlah kasus-jumlah variabel bebas-1) atau 15-2-1 = 12 maka dapat dicari dengan excel => tinv(0,05;12) dan nilai t tabel = 2,1788\n",
         "\n",
-        "d.   H0 diterima jika -t tabel £ t hitung £ t tabel dan H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga 2,855 > 2,1788, atau t hitung > t tabel, artinya H0 ditolak atau adanya pengaruh parsial antara price dan advertising terhadap sales pie.\n",
+        "d.   H0 diterima jika -t tabel £ t hitung £ t tabel dan H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga 2,855 > 2,1788, atau t hitung > t tabel, artinya H0 ditolak atau adanya pengaruh signifikan secara parsial antara price dan advertising terhadap sales pie.\n",
         "\n",
         "\n",
         "\n"
