--- a/Multiple_Linear_Regression_.ipynb
+++ b/Multiple_Linear_Regression_.ipynb
@@ -6,7 +6,7 @@
       "name": "Multiple Linear Regression .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIDzPi1PHk7kh6D1eQM19s",
+      "authorship_tag": "ABX9TyPrxAmfU6NyHTkK0adVs/uj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XniVofN0anQI"
+        "id": "XniVofN0anQI",
+        "outputId": "1511eb8e-8505-41ba-d8f0-3a35435ad0b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -77,14 +82,23 @@
         "plt.rcParams['figure.figsize'] = (7, 7)\n",
         "plt.style.use('ggplot')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "E8hEjl1YbToZ",
-        "outputId": "b697e451-2f8c-4a70-d6b1-3687ee63f174",
+        "outputId": "5bd7f74b-70b9-4dc8-e68c-353cedbdcab6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 514
@@ -92,10 +106,10 @@
       },
       "source": [
         "# Import Dataset\n",
-        "df = pd.read_csv('https://raw.githubusercontent.com/rc-dbe/dti/main/data/pie-sales.csv', sep =\";\")\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/alvarischa/Linear-Regression-/master/data/pie-sales.csv', sep =\";\")\n",
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
