--- a/Multiple_Linear_Regression_.ipynb
+++ b/Multiple_Linear_Regression_.ipynb
@@ -6,7 +6,7 @@
       "name": "Multiple Linear Regression .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrxAmfU6NyHTkK0adVs/uj",
+      "authorship_tag": "ABX9TyPAi/8JgoJ5PXZXjykKokpy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
         "plt.rcParams['figure.figsize'] = (7, 7)\n",
         "plt.style.use('ggplot')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "df = pd.read_csv('https://raw.githubusercontent.com/alvarischa/Linear-Regression-/master/data/pie-sales.csv', sep =\";\")\n",
         "df"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +481,7 @@
         "\n",
         "*   ketika price dan advertising bernilai 0 maka penjualan pie akan bernilai sama dengan interceptnya atau penjualan pie = 306.5261932837436\n",
         "*   nilai coefficients price bernilai negatif artinya ketika nilai price mengalami kenaikan 1% dan nilai advertising tetap maka penjualan pie akan mengalami penurunan sebesar 1% itu. Hal ini menunjukan adanya hubungan negatif antara nilai price dan nilai sales pie nya, ketika price naik maka penjualan pie turun\n",
-        "*   nilai coefficients advertising bernilai positif artinya ketika nilai advertising mengalami kenaikan 1% dan nilai price tetap maka penjualan pie akan mengalami kenaikan sebesar 1% itu. Hal ini menunjukan adanya hubungan positif antara nilai advertising dan nilai sales pie nya, ketika price naik maka penjualan pie naik\n",
+        "*   nilai coefficients advertising bernilai positif artinya ketika nilai advertising mengalami kenaikan 1% dan nilai price tetap maka penjualan pie akan mengalami kenaikan sebesar 1% itu. Hal ini menunjukan adanya hubungan positif antara nilai advertising dan nilai sales pie nya, ketika advertising naik maka penjualan pie naik\n",
         "\n",
         "\n",
         "\n",
@@ -645,7 +645,7 @@
         "\n",
         "Analisis determinasi digunakan untuk mengetahui seberapa besar pengaruh kombinasi variabel bebas secara bersama – sama mempengaruhi variabel terikat. Nilai R-squared berkisar antara 0 - 1. Ketika nilai R-squared bernilai 0 maka tidak ada pengaruh yang diberikan variable bebas terhadap variabel terikat. Pengaruh variabel bebas terhadap variabel terikat bernilai sempurna apabila nilai R-squared sama dengan 1. Pada model summary diatas nilai R-squared nya adalah 0.521 atau 52,1%, yang artinya price dan advertising (variabel bebas) memberikan pengaruh terhadap penjualan pie (variabel terikat) sebesar 52,1% sedangkan sisanya dipengaruhi oleh variabel lain diluar variabel bebas yang ada.\n",
         "\n",
-        "Selanjutnya  Adj. R-squared atau nilai R-squared yang telah disesuaikan akan menghitung setiap penambahan variabel dan akan mengestimasi nilai R squared dari penambahan tersebut. Apabila penambahan variabel baru memperbaiki model hasil regresi dari pada estimasi maka nilai Adj. R-squared akan bertambah. Namun apabila model baru justru lebih kecil dari estimasi maka Adj. R-squarednya akan berkurang.\n",
+        "Selanjutnya  Adj. R-squared atau nilai R-squared yang telah disesuaikan akan menghitung setiap penambahan variabel dan akan mengestimasi nilai R squared dari penambahan tersebut. Apabila penambahan variabel baru memperbaiki model hasil regresi dari pada estimasi maka nilai Adj. R-squared akan bertambah. Namun apabila model baru justru lebih kecil dari estimasi maka Adj. R-squarednya akan berkurang. Artinya penambahan jumlah variabel juga belum tentu menaikkan nilai Adj. R-squarednya.\n",
         "\n",
         "2. Uji F\n",
         "\n",
@@ -680,7 +680,7 @@
         "\n",
         "c. berdasarkan data diatas besarnya T hitung adalah -2,306 dengan destribusi t dicari pada a/2 = 5%/2 = 2,5% = 0,025, maka besarnya (jumlah variabel–1) = 2 dan (jumlah kasus-jumlah variabel bebas-1) atau 15-2-1 = 12 maka dapat dicari dengan excel => tinv(0,05;12) dan nilai t tabel = -2,1788\n",
         "\n",
-        "d.  H0 diterima jika -t tabel < t hitung < t tabel, H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga -2,306 < -2,1788, atau t hitung < t tabel, artinya H0 diterima atau tidak adanya pengaruh signifikan secara parsial antara price dan advertising terhadap sales pie.\n",
+        "d.  H0 diterima jika -t tabel < t hitung < t tabel, H0 ditolak jika -t hitung < -t tabel atau t hitung > t tabel, sehingga -2,306 > -2,1788, atau -t hitung < -t tabel, artinya H0 ditolak atau adanya pengaruh signifikan secara parsial antara price dan advertising terhadap sales pie.\n",
         "\n",
         "> advertising\n",
         "\n",
